Tue Oct 30 16:50:46 GMT 2001  Olly Betts <olly@survex.com>

	* Removed superfluous lines from configure.in; fixed warning from
	  automake 1.5.

Mon Oct 29 11:54:36 GMT 2001  Olly Betts <olly@survex.com>

	* Changed matcher to form proto-mset using a min-heap (as described
	  in "Managing Gigabytes", 2nd ed., pp 211-213).  Compared to the
	  previous "nth-element" approach, this uses about half the memory,
	  allows the min-weight based matcher optimisations to work sooner,
	  and should be inherently faster (not yet benchmarked though).  The
	  code's slightly simpler too.

Mon Oct 29 11:53:38 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed remote backend to pass match_cutoff setting across.

Fri Oct 26 13:43:08 BST 2001  Olly Betts <olly@survex.com>

	* Reserve size needed for mset vector.

Thu Oct 25 18:00:54 BST 2001  Olly Betts <olly@survex.com>

	* Fixed a couple of stray references to the old sleepycat backend.

Tue Oct 23 18:19:32 BST 2001  Olly Betts <olly@survex.com>

	* More cleaning up of MultiMatch.

Tue Oct 23 16:14:27 BST 2001  Olly Betts <olly@survex.com>

	* Removed RemotePostList - it was an experimental idea which proved
	  to be too slow even on a fast network.  Cleaned up code where hooks
	  were bodged in for it.

Tue Oct 23 13:27:12 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Added documentation of the test system (albeit brief). Also
	  mentioned the autotools book in HACKING.

Tue Oct 23 12:07:59 BST 2001  Olly Betts <olly@survex.com>

	* Updated .cvsignore files.

Tue Oct 23 11:29:47 BST 2001  Olly Betts <olly@survex.com>

	* Code tidying while investigating sporadic fails from quartztest.

Mon Oct 22 17:42:30 BST 2001  Olly Betts <olly@survex.com>

	* Minor fettles to quartztest: fixed warnings, whitespace tidying,
	  use mkdir(...) rather than system("mkdir ...")

Mon Oct 22 16:41:12 2001  James Aylett  <tartarus@users.sourceforge.net>

	* Renamed project to Xapian.
